<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/orderFragment"
          android:title="@string/order"
          android:icon="@drawable/ic_order"
          app:showAsAction="always"/>
    <item android:id="@+id/categoryFragment"
          android:title="@string/category"
          android:icon="@drawable/ic_category"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/productFragment"
          android:title="@string/product"
          android:icon="@drawable/ic_product"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/hotFragment"
        android:title="@string/hot"
        android:icon="@drawable/ic_hot"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/userFragment"
          android:title="@string/user"
          android:icon="@drawable/ic_user"
          app:showAsAction="ifRoom"/>

</menu>