<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="entity"
            type="com.github.luoyemyy.mall.manager.bean.User"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutUser"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:elevation="1dp"
            android:layout_height="92dp"
            android:background="@drawable/ripple_item">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:photo="@{entity.headImage}"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/imgPhoto"
                app:layout_constraintTop_toTopOf="@id/imgPhoto"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/text_header"
                android:text="@{entity.name}"
                tools:text="叶玉明"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/textView"
                app:layout_constraintBottom_toBottomOf="@id/textView"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text_title"
                android:text="@{entity.gender()}"
                tools:text="♀"/>

            <TextView
                android:id="@+id/txtPhone"
                app:layout_constraintLeft_toRightOf="@id/imgPhoto"
                app:layout_constraintBottom_toBottomOf="@id/imgPhoto"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textColor="@color/text_content"
                android:text="@{entity.phone}"
                tools:text="18681506437"/>

            <TextView
                android:id="@+id/txtRole"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_content"
                android:text="@{entity.roleName}"
                tools:text="系统管理员"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:is_show="@{entity.roleId==1||entity.roleId==2}"/>

        <TextView
            android:id="@+id/txtAdmin"
            android:elevation="1dp"
            android:textColor="@color/text_content"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ripple_item"
            android:text="@string/admin"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:is_show="@{entity.roleId==1}"/>

        <TextView
            android:id="@+id/txtManger"
            android:elevation="1dp"
            android:textColor="@color/text_content"
            android:textSize="14sp"
            android:layout_marginTop="1px"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ripple_item"
            android:text="@string/manager"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:is_show="@{entity.roleId==1||entity.roleId==2}"/>

        <TextView
            android:id="@+id/txtPostage"
            android:elevation="1dp"
            android:textColor="@color/text_content"
            android:textSize="14sp"
            android:layout_marginTop="1px"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ripple_item"
            android:text="@string/postage"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:is_show="@{entity.roleId==1||entity.roleId==2}"/>

        <TextView
            android:id="@+id/txtWallet"
            android:elevation="1dp"
            android:textColor="@color/text_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ripple_item"
            android:text="@string/wallet"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <TextView
            android:id="@+id/txtAbout"
            android:elevation="1dp"
            android:textColor="@color/text_content"
            android:textSize="14sp"
            android:layout_marginTop="1px"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ripple_item"
            android:text="@string/about"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <TextView
            android:id="@+id/txtExit"
            android:elevation="1dp"
            android:textColor="@color/text_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ripple_item"
            android:text="@string/exit"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
    </LinearLayout>
</layout>